added cypress tests and GitHub action config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v3
         with:
+          project: .
           browser: chromium
           build: pnpm run build
           start: pnpm run start
