--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Cypress run
         uses: cypress-io/github-action@v3
         with:
           project: .
           browser: chromium
-          build: pnpm run build
-          start: pnpm run start
+          build: npm run build
+          start: npm run start
           wait-on: 'http://localhost:3000'
         env:
           COMMERCE_PROVIDER: ${{ secrets.COMMERCE_PROVIDER }}
